app.js updated now reset button used to reload the page

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
       <input type="button" value="Sign Up">
     </div>
     <div id="reset">
-      <input type="reset" value="Reset">
+      <input type="reset" value="Reset" id="reset">
     </div>
   </form>
     <div id="termsAndPrivacy">
